src/main/antlr4/com/welyab/anjabachen/grammar/.antlr/fenParser.java
// Generated from /home/welyab/sources/chess/src/main/antlr4/com/welyab/anjabachen/grammar/fen.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class fenParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LowerLetterA=1, LowerLetterB=2, LowerLetterC=3, LowerLetterD=4, LowerLetterE=5, 
		LowerLetterF=6, LowerLetterG=7, LowerLetterH=8, LowerLetterK=9, LowerLetterN=10, 
		LowerLetterP=11, LowerLetterQ=12, LowerLetterR=13, LowerLetterW=14, UpperLetterB=15, 
		UpperLetterK=16, UpperLetterN=17, UpperLetterP=18, UpperLetterQ=19, UpperLetterR=20, 
		Zero=21, One=22, Two=23, Three=24, Four=25, Five=26, Six=27, Seven=28, 
		Eight=29, Nine=30, Hyphen=31, Slash=32, Space=33;
	public static final int
		RULE_fen = 0, RULE_piecePlacement = 1, RULE_dispositionRank1 = 2, RULE_dispositionRank2 = 3, 
		RULE_dispositionRank3 = 4, RULE_dispositionRank4 = 5, RULE_dispositionRank5 = 6, 
		RULE_dispositionRank6 = 7, RULE_dispositionRank7 = 8, RULE_dispositionRank8 = 9, 
		RULE_pieceDisposition = 10, RULE_piece = 11, RULE_blackPiece = 12, RULE_whitePiece = 13, 
		RULE_blackKing = 14, RULE_blackQueen = 15, RULE_blackRook = 16, RULE_blackBishop = 17, 
		RULE_blackKnight = 18, RULE_blackPawn = 19, RULE_whiteKing = 20, RULE_whiteQueen = 21, 
		RULE_whiteRook = 22, RULE_whiteBishop = 23, RULE_whiteKnight = 24, RULE_whitePawn = 25, 
		RULE_sideToMove = 26, RULE_castlingAbility = 27, RULE_whiteKingSideCastling = 28, 
		RULE_whiteQueenSideCastling = 29, RULE_blackKingSideCastling = 30, RULE_blackQueenSideCastling = 31, 
		RULE_enPassantTargetSquare = 32, RULE_halfMoveClock = 33, RULE_fullMoveCounter = 34, 
		RULE_file = 35, RULE_rank1 = 36, RULE_rank2 = 37, RULE_rank3 = 38, RULE_rank4 = 39, 
		RULE_rank5 = 40, RULE_rank6 = 41, RULE_rank7 = 42, RULE_rank9 = 43, RULE_none = 44, 
		RULE_white = 45, RULE_black = 46, RULE_digitOneToFour = 47, RULE_digitZeroToNine = 48, 
		RULE_digitOneToNine = 49, RULE_digitOneToSeven = 50;
	public static final String[] ruleNames = {
		"fen", "piecePlacement", "dispositionRank1", "dispositionRank2", "dispositionRank3", 
		"dispositionRank4", "dispositionRank5", "dispositionRank6", "dispositionRank7", 
		"dispositionRank8", "pieceDisposition", "piece", "blackPiece", "whitePiece", 
		"blackKing", "blackQueen", "blackRook", "blackBishop", "blackKnight", 
		"blackPawn", "whiteKing", "whiteQueen", "whiteRook", "whiteBishop", "whiteKnight", 
		"whitePawn", "sideToMove", "castlingAbility", "whiteKingSideCastling", 
		"whiteQueenSideCastling", "blackKingSideCastling", "blackQueenSideCastling", 
		"enPassantTargetSquare", "halfMoveClock", "fullMoveCounter", "file", "rank1", 
		"rank2", "rank3", "rank4", "rank5", "rank6", "rank7", "rank9", "none", 
		"white", "black", "digitOneToFour", "digitZeroToNine", "digitOneToNine", 
		"digitOneToSeven"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'a'", "'b'", "'c'", "'d'", "'e'", "'f'", "'g'", "'h'", "'k'", "'n'", 
		"'p'", "'q'", "'r'", "'w'", "'B'", "'K'", "'N'", "'P'", "'Q'", "'R'", 
		"'0'", "'1'", "'2'", "'3'", "'4'", "'5'", "'6'", "'7'", "'8'", "'9'", 
		"'-'", "'/'", "' '"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "LowerLetterA", "LowerLetterB", "LowerLetterC", "LowerLetterD", 
		"LowerLetterE", "LowerLetterF", "LowerLetterG", "LowerLetterH", "LowerLetterK", 
		"LowerLetterN", "LowerLetterP", "LowerLetterQ", "LowerLetterR", "LowerLetterW", 
		"UpperLetterB", "UpperLetterK", "UpperLetterN", "UpperLetterP", "UpperLetterQ", 
		"UpperLetterR", "Zero", "One", "Two", "Three", "Four", "Five", "Six", 
		"Seven", "Eight", "Nine", "Hyphen", "Slash", "Space"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "fen.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public fenParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class FenContext extends ParserRuleContext {
		public PiecePlacementContext piecePlacement() {
			return getRuleContext(PiecePlacementContext.class,0);
		}
		public List<TerminalNode> Space() { return getTokens(fenParser.Space); }
		public TerminalNode Space(int i) {
			return getToken(fenParser.Space, i);
		}
		public SideToMoveContext sideToMove() {
			return getRuleContext(SideToMoveContext.class,0);
		}
		public CastlingAbilityContext castlingAbility() {
			return getRuleContext(CastlingAbilityContext.class,0);
		}
		public EnPassantTargetSquareContext enPassantTargetSquare() {
			return getRuleContext(EnPassantTargetSquareContext.class,0);
		}
		public HalfMoveClockContext halfMoveClock() {
			return getRuleContext(HalfMoveClockContext.class,0);
		}
		public FullMoveCounterContext fullMoveCounter() {
			return getRuleContext(FullMoveCounterContext.class,0);
		}
		public TerminalNode EOF() { return getToken(fenParser.EOF, 0); }
		public FenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fen; }
	}

	public final FenContext fen() throws RecognitionException {
		FenContext _localctx = new FenContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_fen);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			piecePlacement();
			setState(103);
			match(Space);
			setState(104);
			sideToMove();
			setState(105);
			match(Space);
			setState(106);
			castlingAbility();
			setState(107);
			match(Space);
			setState(108);
			enPassantTargetSquare();
			setState(109);
			match(Space);
			setState(110);
			halfMoveClock();
			setState(111);
			match(Space);
			setState(112);
			fullMoveCounter();
			setState(113);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PiecePlacementContext extends ParserRuleContext {
		public DispositionRank1Context dispositionRank1() {
			return getRuleContext(DispositionRank1Context.class,0);
		}
		public List<TerminalNode> Slash() { return getTokens(fenParser.Slash); }
		public TerminalNode Slash(int i) {
			return getToken(fenParser.Slash, i);
		}
		public DispositionRank2Context dispositionRank2() {
			return getRuleContext(DispositionRank2Context.class,0);
		}
		public DispositionRank3Context dispositionRank3() {
			return getRuleContext(DispositionRank3Context.class,0);
		}
		public DispositionRank4Context dispositionRank4() {
			return getRuleContext(DispositionRank4Context.class,0);
		}
		public DispositionRank5Context dispositionRank5() {
			return getRuleContext(DispositionRank5Context.class,0);
		}
		public DispositionRank6Context dispositionRank6() {
			return getRuleContext(DispositionRank6Context.class,0);
		}
		public DispositionRank7Context dispositionRank7() {
			return getRuleContext(DispositionRank7Context.class,0);
		}
		public DispositionRank8Context dispositionRank8() {
			return getRuleContext(DispositionRank8Context.class,0);
		}
		public PiecePlacementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_piecePlacement; }
	}

	public final PiecePlacementContext piecePlacement() throws RecognitionException {
		PiecePlacementContext _localctx = new PiecePlacementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_piecePlacement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			dispositionRank1();
			setState(116);
			match(Slash);
			setState(117);
			dispositionRank2();
			setState(118);
			match(Slash);
			setState(119);
			dispositionRank3();
			setState(120);
			match(Slash);
			setState(121);
			dispositionRank4();
			setState(122);
			match(Slash);
			setState(123);
			dispositionRank5();
			setState(124);
			match(Slash);
			setState(125);
			dispositionRank6();
			setState(126);
			match(Slash);
			setState(127);
			dispositionRank7();
			setState(128);
			match(Slash);
			setState(129);
			dispositionRank8();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DispositionRank1Context extends ParserRuleContext {
		public PieceDispositionContext pieceDisposition() {
			return getRuleContext(PieceDispositionContext.class,0);
		}
		public DispositionRank1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dispositionRank1; }
	}

	public final DispositionRank1Context dispositionRank1() throws RecognitionException {
		DispositionRank1Context _localctx = new DispositionRank1Context(_ctx, getState());
		enterRule(_localctx, 4, RULE_dispositionRank1);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			pieceDisposition();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DispositionRank2Context extends ParserRuleContext {
		public PieceDispositionContext pieceDisposition() {
			return getRuleContext(PieceDispositionContext.class,0);
		}
		public DispositionRank2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dispositionRank2; }
	}

	public final DispositionRank2Context dispositionRank2() throws RecognitionException {
		DispositionRank2Context _localctx = new DispositionRank2Context(_ctx, getState());
		enterRule(_localctx, 6, RULE_dispositionRank2);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			pieceDisposition();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DispositionRank3Context extends ParserRuleContext {
		public PieceDispositionContext pieceDisposition() {
			return getRuleContext(PieceDispositionContext.class,0);
		}
		public DispositionRank3Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dispositionRank3; }
	}

	public final DispositionRank3Context dispositionRank3() throws RecognitionException {
		DispositionRank3Context _localctx = new DispositionRank3Context(_ctx, getState());
		enterRule(_localctx, 8, RULE_dispositionRank3);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			pieceDisposition();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DispositionRank4Context extends ParserRuleContext {
		public PieceDispositionContext pieceDisposition() {
			return getRuleContext(PieceDispositionContext.class,0);
		}
		public DispositionRank4Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dispositionRank4; }
	}

	public final DispositionRank4Context dispositionRank4() throws RecognitionException {
		DispositionRank4Context _localctx = new DispositionRank4Context(_ctx, getState());
		enterRule(_localctx, 10, RULE_dispositionRank4);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			pieceDisposition();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DispositionRank5Context extends ParserRuleContext {
		public PieceDispositionContext pieceDisposition() {
			return getRuleContext(PieceDispositionContext.class,0);
		}
		public DispositionRank5Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dispositionRank5; }
	}

	public final DispositionRank5Context dispositionRank5() throws RecognitionException {
		DispositionRank5Context _localctx = new DispositionRank5Context(_ctx, getState());
		enterRule(_localctx, 12, RULE_dispositionRank5);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			pieceDisposition();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DispositionRank6Context extends ParserRuleContext {
		public PieceDispositionContext pieceDisposition() {
			return getRuleContext(PieceDispositionContext.class,0);
		}
		public DispositionRank6Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dispositionRank6; }
	}

	public final DispositionRank6Context dispositionRank6() throws RecognitionException {
		DispositionRank6Context _localctx = new DispositionRank6Context(_ctx, getState());
		enterRule(_localctx, 14, RULE_dispositionRank6);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			pieceDisposition();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DispositionRank7Context extends ParserRuleContext {
		public PieceDispositionContext pieceDisposition() {
			return getRuleContext(PieceDispositionContext.class,0);
		}
		public DispositionRank7Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dispositionRank7; }
	}

	public final DispositionRank7Context dispositionRank7() throws RecognitionException {
		DispositionRank7Context _localctx = new DispositionRank7Context(_ctx, getState());
		enterRule(_localctx, 16, RULE_dispositionRank7);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			pieceDisposition();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DispositionRank8Context extends ParserRuleContext {
		public PieceDispositionContext pieceDisposition() {
			return getRuleContext(PieceDispositionContext.class,0);
		}
		public DispositionRank8Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dispositionRank8; }
	}

	public final DispositionRank8Context dispositionRank8() throws RecognitionException {
		DispositionRank8Context _localctx = new DispositionRank8Context(_ctx, getState());
		enterRule(_localctx, 18, RULE_dispositionRank8);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			pieceDisposition();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PieceDispositionContext extends ParserRuleContext {
		public TerminalNode Eight() { return getToken(fenParser.Eight, 0); }
		public List<PieceContext> piece() {
			return getRuleContexts(PieceContext.class);
		}
		public PieceContext piece(int i) {
			return getRuleContext(PieceContext.class,i);
		}
		public List<DigitOneToSevenContext> digitOneToSeven() {
			return getRuleContexts(DigitOneToSevenContext.class);
		}
		public DigitOneToSevenContext digitOneToSeven(int i) {
			return getRuleContext(DigitOneToSevenContext.class,i);
		}
		public DigitOneToNineContext digitOneToNine() {
			return getRuleContext(DigitOneToNineContext.class,0);
		}
		public PieceDispositionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pieceDisposition; }
	}

	public final PieceDispositionContext pieceDisposition() throws RecognitionException {
		PieceDispositionContext _localctx = new PieceDispositionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_pieceDisposition);
		int _la;
		try {
			int _alt;
			setState(183);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(147);
				match(Eight);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(149); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(148);
					piece();
					}
					}
					setState(151); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LowerLetterB) | (1L << LowerLetterK) | (1L << LowerLetterN) | (1L << LowerLetterP) | (1L << LowerLetterQ) | (1L << LowerLetterR) | (1L << UpperLetterB) | (1L << UpperLetterK) | (1L << UpperLetterN) | (1L << UpperLetterP) | (1L << UpperLetterQ) | (1L << UpperLetterR))) != 0) );
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(160); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(154); 
						_errHandler.sync(this);
						_la = _input.LA(1);
						do {
							{
							{
							setState(153);
							piece();
							}
							}
							setState(156); 
							_errHandler.sync(this);
							_la = _input.LA(1);
						} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LowerLetterB) | (1L << LowerLetterK) | (1L << LowerLetterN) | (1L << LowerLetterP) | (1L << LowerLetterQ) | (1L << LowerLetterR) | (1L << UpperLetterB) | (1L << UpperLetterK) | (1L << UpperLetterN) | (1L << UpperLetterP) | (1L << UpperLetterQ) | (1L << UpperLetterR))) != 0) );
						setState(158);
						digitOneToSeven();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(162); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				setState(167);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LowerLetterB) | (1L << LowerLetterK) | (1L << LowerLetterN) | (1L << LowerLetterP) | (1L << LowerLetterQ) | (1L << LowerLetterR) | (1L << UpperLetterB) | (1L << UpperLetterK) | (1L << UpperLetterN) | (1L << UpperLetterP) | (1L << UpperLetterQ) | (1L << UpperLetterR))) != 0)) {
					{
					{
					setState(164);
					piece();
					}
					}
					setState(169);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(176); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(170);
						digitOneToSeven();
						setState(172); 
						_errHandler.sync(this);
						_la = _input.LA(1);
						do {
							{
							{
							setState(171);
							piece();
							}
							}
							setState(174); 
							_errHandler.sync(this);
							_la = _input.LA(1);
						} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LowerLetterB) | (1L << LowerLetterK) | (1L << LowerLetterN) | (1L << LowerLetterP) | (1L << LowerLetterQ) | (1L << LowerLetterR) | (1L << UpperLetterB) | (1L << UpperLetterK) | (1L << UpperLetterN) | (1L << UpperLetterP) | (1L << UpperLetterQ) | (1L << UpperLetterR))) != 0) );
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(178); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				setState(181);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << One) | (1L << Two) | (1L << Three) | (1L << Four) | (1L << Five) | (1L << Six) | (1L << Seven) | (1L << Eight) | (1L << Nine))) != 0)) {
					{
					setState(180);
					digitOneToNine();
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PieceContext extends ParserRuleContext {
		public BlackPieceContext blackPiece() {
			return getRuleContext(BlackPieceContext.class,0);
		}
		public WhitePieceContext whitePiece() {
			return getRuleContext(WhitePieceContext.class,0);
		}
		public PieceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_piece; }
	}

	public final PieceContext piece() throws RecognitionException {
		PieceContext _localctx = new PieceContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_piece);
		try {
			setState(187);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LowerLetterB:
			case LowerLetterK:
			case LowerLetterN:
			case LowerLetterP:
			case LowerLetterQ:
			case LowerLetterR:
				enterOuterAlt(_localctx, 1);
				{
				setState(185);
				blackPiece();
				}
				break;
			case UpperLetterB:
			case UpperLetterK:
			case UpperLetterN:
			case UpperLetterP:
			case UpperLetterQ:
			case UpperLetterR:
				enterOuterAlt(_localctx, 2);
				{
				setState(186);
				whitePiece();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlackPieceContext extends ParserRuleContext {
		public BlackKingContext blackKing() {
			return getRuleContext(BlackKingContext.class,0);
		}
		public BlackQueenContext blackQueen() {
			return getRuleContext(BlackQueenContext.class,0);
		}
		public BlackRookContext blackRook() {
			return getRuleContext(BlackRookContext.class,0);
		}
		public BlackBishopContext blackBishop() {
			return getRuleContext(BlackBishopContext.class,0);
		}
		public BlackKnightContext blackKnight() {
			return getRuleContext(BlackKnightContext.class,0);
		}
		public BlackPawnContext blackPawn() {
			return getRuleContext(BlackPawnContext.class,0);
		}
		public BlackPieceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blackPiece; }
	}

	public final BlackPieceContext blackPiece() throws RecognitionException {
		BlackPieceContext _localctx = new BlackPieceContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_blackPiece);
		try {
			setState(195);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LowerLetterK:
				enterOuterAlt(_localctx, 1);
				{
				setState(189);
				blackKing();
				}
				break;
			case LowerLetterQ:
				enterOuterAlt(_localctx, 2);
				{
				setState(190);
				blackQueen();
				}
				break;
			case LowerLetterR:
				enterOuterAlt(_localctx, 3);
				{
				setState(191);
				blackRook();
				}
				break;
			case LowerLetterB:
				enterOuterAlt(_localctx, 4);
				{
				setState(192);
				blackBishop();
				}
				break;
			case LowerLetterN:
				enterOuterAlt(_localctx, 5);
				{
				setState(193);
				blackKnight();
				}
				break;
			case LowerLetterP:
				enterOuterAlt(_localctx, 6);
				{
				setState(194);
				blackPawn();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhitePieceContext extends ParserRuleContext {
		public WhiteKingContext whiteKing() {
			return getRuleContext(WhiteKingContext.class,0);
		}
		public WhiteQueenContext whiteQueen() {
			return getRuleContext(WhiteQueenContext.class,0);
		}
		public WhiteRookContext whiteRook() {
			return getRuleContext(WhiteRookContext.class,0);
		}
		public WhiteBishopContext whiteBishop() {
			return getRuleContext(WhiteBishopContext.class,0);
		}
		public WhiteKnightContext whiteKnight() {
			return getRuleContext(WhiteKnightContext.class,0);
		}
		public WhitePawnContext whitePawn() {
			return getRuleContext(WhitePawnContext.class,0);
		}
		public WhitePieceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whitePiece; }
	}
